# webrtc

./: README.md  webrtc编译.txt
c-project/: CMakeLists.txt
c-project/desktop_ctrl/: CMakeLists.txt
c-project/desktop_ctrl/src/: dllmain.cpp
c-project/socketio-client/: CMakeLists.txt
c-project/socketio-client-r/: CMakeLists.txt
c-project/socketio-client-r/src/: main.cpp  sio_client_impl.cpp
c-project/socketio-client/lib/rapidjson/: readme.md
c-project/socketio-client/lib/websocketpp/: readme.md
c-project/socketio-client/src/: sio_packet.cpp
c-project/webrtc-client/: CMakeLists.txt
c-project/webrtc-client/include/: DesktopCtrl.h  MyCapturer.h  MyScreenCapture.h  conductor.h
c-project/webrtc-client/include/internal/: sio_client_impl.h
c-project/webrtc-client/src/: MyCapturer.cpp  MyScreenCapture.cpp  conductor.cpp  main.cpp
client-android/: build.gradle
client-android/app/: build.gradle
client-android/app/src/main/: AndroidManifest.xml
client-android/app/src/main/res/drawable/: endcall_btn_selector.xml
client-android/app/src/main/res/layout/: activity_call.xml  activity_main.xml
client-android/gradle/wrapper/: gradle-wrapper.properties
client-vue/: .gitignore  README.md  node_test.js  package-lock.json  package.json  vue.config.js
client-vue/public/: index.html
client-vue/src/: App.vue  main.js
client-vue/src/components/webrtc/: DeskCtrl.vue  RemoteDes.vue  RemoteRelayDes.vue  RemoteSrc.vue
client-vue/src/router/: index.js
client-vue/src/utils/: mouseListener.js  urlUtil.js
client-vue/src/views/: DeskCtrlPage.vue  RelayPage.vue  SrcPage.vue  SupervisionList.vue
client-vue/src/views/manage/: SocketManage.vue
server-client-node/: .gitignore  README.md  local-web-server-http.js  local-web-server.js  main.js  package-lock.json  package.json
server-client-node/config/: config.json  config.json.back-local  config.json.back-server1
server-client-node/local/: config.html  multi-remote-src.html  remote-src.html
server-client-node/local/js/: multi-remote-src.js  remote-src.js
server-client-node/local/js/util/: app-config.js  logjs.js
server-client-node/public/cert/: zdomain.top.crt  zdomain.top.key  zdomain.top.pem  zztest.com.key  zztest.com.pem  证书转换.txt
server-client-node/public/demo/: test-des.html  test.html
server-client-node/public/demo/js/: test-des.js  test.js
server-client-node/public/media-web/: index.html
server-client-node/public/media-web/css/: app.42033398.css  chunk-1c8da0fc.50d79711.css  chunk-67dca37e.3bb01726.css  chunk-7cce3027.7018d526.css
server-client-node/public/media-web/js/: app.b2c0f15a.js  app.b2c0f15a.js.map  chunk-1c8da0fc.0829657c.js  chunk-1c8da0fc.0829657c.js.map  chunk-67dca37e.877495c1.js  chunk-67dca37e.877495c1.js.map  chunk-7cce3027.513b594a.js  chunk-7cce3027.513b594a.js.map  chunk-8efa2492.9159e390.js  chunk-8efa2492.9159e390.js.map  chunk-aafde048.daac6c96.js  chunk-aafde048.daac6c96.js.map  chunk-c7d60660.c42d77af.js  chunk-c7d60660.c42d77af.js.map  chunk-vendors.ea9245f1.js  chunk-vendors.ea9245f1.js.map
server-client-node/public/peer/: multi-remote-des.html  multi-remote-des1.html  multi-remote-des2.html  remote-des.html
server-client-node/public/peer/js/: multi-remote-des.js  multi-remote-des1.js  remote-des.js
server-client-node/public/peer/js/libs2/: mouseListener.js
server-java/: README.md  pom.xml
server-java/src/main/java/com/example/server/: RmoteServerApplication.java
server-java/src/main/java/com/example/server/common/: Result.java
server-java/src/main/java/com/example/server/config/: Constant.java  PropertiesHelper.java  ResourceBundleHelper.java  SocketEventListenner.java  SocketIOConfig.java  SocketService.java  SpringContextHolder.java  WebGlobalConfig.java
server-java/src/main/java/com/example/server/controller/: SocketController.java  SocketManageController.java
server-java/src/main/java/com/example/server/entity/: SubMessage.java
server-java/src/main/java/com/example/server/listener/: ApplicationCloseListener.java
server-java/src/main/resources/: application-dev.yml  application.yml  logback.xml
server-java/src/main/resources/static/: client.html
server-java/src/main/resources/static/css/: des.css
server-java/src/main/resources/static/js/: des-media-data-robot.js
server-java/src/main/resources/static/js/libs2/: mouseListener.js
server-java/src/test/java/com/example/server/: SSLSocketClient.java  TestWs.java  TestWss.java
socketio-html/: scoketio.html  websocket.html
(+6 files in other folders)
